2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on FreeBSD/x86_64.
	* Makefile.devel (multibuild-freebsd-x86_64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For FreeBSD/x86_64, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on FreeBSD/i386.
	* Makefile.devel (multibuild-freebsd-i386): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For FreeBSD/i386, enable all optimizations
	except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/mips64.
	* Makefile.devel (multibuild-linux-mips-64): Renamed from
	multibuild-linux-mipseb-64 and multibuild-linux-mipsel-64. Enable all
	build variants that work.
	* makemake.in (XCFLAGS): For Linux/mips64 with 64-bit ABI, enable all
	optimizations except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/mipsn32.
	* Makefile.devel (multibuild-linux-mips-n32): Renamed from
	multibuild-linux-mipseb-n32 and multibuild-linux-mipsel-n32. Enable all
	build variants that work.
	* makemake.in (XCFLAGS): For Linux/mips64 with n32 ABI, enable all
	optimizations except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/mips.
	* Makefile.devel (multibuild-linux-mips-32): Renamed from
	multibuild-linux-mipseb-32 and multibuild-linux-mipsel-32. Enable all
	build variants that work.
	* makemake.in (XCFLAGS): For Linux/mips with o32 ABI, enable all
	optimizations except ASM.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix failure of the spvw_pure_blocks build on Linux/mipsn32.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_START): Treat Linux/mipsn32 like
	Linux/mips32.
	(SINGLEMAP_*) [Linux/mipsn32]: Update accordingly.

2018-01-14  Bruno Haible  <bruno@clisp.org>

	Fix compilation error on Linux/mipsn32.
	* makemake.in: On mipsn32 platforms, use ari_asm_mips.d and
	sp_asm_mips.d.